--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -110,6 +116,40 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <!--swagger2 - 生成word文档-->
+            <plugin>
+                <groupId>io.github.swagger2markup</groupId>
+                <artifactId>swagger2markup-maven-plugin</artifactId>
+                <version>1.3.1</version>
+                <configuration>
+                    <swaggerInput>http://localhost:8080/v2/api-docs</swaggerInput><!---swagger-api-json路径-->
+                    <outputDir>docs/asciidoc/generated</outputDir><!---生成路径-->
+                    <config>
+                        <swagger2markup.markupLanguage>ASCIIDOC</swagger2markup.markupLanguage><!--生成格式-->
+                    </config>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.6</version>
+                <configuration>
+                    <!--asciidoc文件目录-->
+                    <sourceDirectory>docs/asciidoc/generated</sourceDirectory>
+                    <!---生成html的路径-->
+                    <outputDirectory>docs/asciidoc/html</outputDirectory>
+                    <backend>html</backend>
+                    <sourceHighlighter>coderay</sourceHighlighter>
+                    <attributes>
+                        <!--导航栏在左-->
+                        <toc>left</toc>
+                        <!--显示层级数-->
+                        <!--<toclevels>3</toclevels>-->
+                        <!--自动打数字序号-->
+                        <sectnums>true</sectnums>
+                    </attributes>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
