--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,34 @@ spring.datasource.url=jdbc:mysql://localhost:3306/shoestp_new?useUnicode=true&ch
 spring.datasource.username=root
 spring.datasource.password=root
 
+# 数据库连接池类型
+spring.datasource.druid.type=com.alibaba.druid.pool.DruidDataSource
+# 连接池初始化大小
+spring.datasource.druid.initial-size=5
+# 最大连接池数量
+spring.datasource.druid.max-active=20
+# 最小连接池数量
+spring.datasource.druid.min-idle=5
+# 获取连接等待超时时长
+spring.datasource.druid.max-wait=60000
+# 是否打开PSCache
+spring.datasource.druid.pool-prepared-statements=true
+# 指定每个连接上PSCache的大小
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
+# 配置一个连接
+spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
+spring.datasource.druid.validation-query-timeout=300000
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-while-idle=true
+# 间隔多长时间检测需要关闭的空闲连接
+spring.datasource.druid.time-between-eviction-runs-millis=600000
+# 一个连接在池中最小生存时间
+spring.datasource.druid.min-evictable-idle-time-millis=600000
+# 一个连接在池中最大生存时间
+spring.datasource.druid.max-evictable-idle-time-millis=900000
+
+
 spring.jpa.hibernate.ddl-auto=update
 
 spring.profiles.active=dev
