--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,9 @@ spring.datasource.druid.min-evictable-idle-time-millis=600000
 spring.datasource.druid.max-evictable-idle-time-millis=900000
 
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.profiles.active=dev
 #spring.profiles.active=test
